# computer_science_4_sem

./: README.md  animals.hpp
My_py/include/: my_py_int_obj.h  my_py_obj.h  my_py_var.h  parser.h  token.h
My_py/src/: main.c  parser.c
animals/CPP_realisation/: animals.hpp  main.cpp
animals/C_realisation1/: cat.c  cat.h  dog.c  dog.h  main.c
animals/C_realisation2/: animals.c  animals.h  main.c
dynamic_animals/: CMakeLists.txt
dynamic_animals/include/: animal.h  cat.h  class_obj.h  dog.h  method_list.h
dynamic_animals/src/: cat.c  dog.c  main.c  obj.c
my_compiler/: CMakeLists.txt  README-R.md
sfml_tutorial/: CMakeLists.txt  main.cpp
